Make converters handle byte arrays rather than strings. Simplify LoggerHandler. Specify charset in options even if user might never be able to set it.